Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8276209
Some call sites doesn't pass the parameter 'size' to SharedRuntime::dtrace_object_alloc(_base)
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
18
Affects Version/s:
None
Component/s:
hotspot
Labels:
None
Subcomponent:
svc
Resolved In Build:
b23
Description
JDK-8039904
added a new parameter 'size' to SharedRuntime::dtrace_object_alloc and dtrace_object_alloc_base, but didn't modified the call sites(interpreter/c1/c2).
Attachments
Issue Links
links to
Commit
openjdk/jdk/c815c5cb
Review
openjdk/jdk/6181
Activity
People
Assignee:
Denghui Dong
Reporter:
Denghui Dong
Votes
:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2021-10-31 08:04
Updated:
2024-02-05 18:53
Resolved:
2021-11-08 06:32