src/hotspot/share/runtime/sharedRuntime.cpp
@@ -1001,8 +1001,12 @@ jlong SharedRuntime::get_java_tid(Thread* thread) {
  * it gets turned into a tail-call on sparc, which runs into dtrace bug
  * 6254741.  Once that is fixed we can remove the dummy return value.
  */
-int SharedRuntime::dtrace_object_alloc(oopDesc* o, int size) {
-  return dtrace_object_alloc_base(Thread::current(), o, size);
+int SharedRuntime::dtrace_object_alloc(oopDesc* o) {
+  return dtrace_object_alloc_base(Thread::current(), o);
+}
+
+int SharedRuntime::dtrace_object_alloc_base(Thread* thread, oopDesc* o) {
+  return dtrace_object_alloc_base(thread, o, o->size());
 }
 
 int SharedRuntime::dtrace_object_alloc_base(Thread* thread, oopDesc* o, int size) {
